[gd_scene load_steps=9 format=3 uid="uid://d7lwkk74i4o1"]

[ext_resource type="Script" path="res://Components/Inventory/item_stats.gd" id="1_4bbpx"]
[ext_resource type="Texture2D" uid="uid://ciso5gh08c3de" path="res://UITextures/BGTextures/Inventory/EmptySlot/hannah_empty_slot_bg.png" id="3_iotqp"]
[ext_resource type="FontFile" uid="uid://chprskojxilgj" path="res://UITextures/Fonts/argentum-sans.black.ttf" id="3_x8rl0"]
[ext_resource type="Texture2D" uid="uid://bsch6o78xyfv6" path="res://UITextures/BGTextures/item_stat_bg.png" id="3_yq227"]
[ext_resource type="Texture2D" uid="uid://br0hqqbj0u2vj" path="res://UITextures/Buttons/main_button.png" id="4_3i6tk"]
[ext_resource type="FontFile" uid="uid://pv0ja7y8uilm" path="res://UITextures/Fonts/HankenGrotesk-Bold.ttf" id="5_fgky4"]
[ext_resource type="Texture2D" uid="uid://irgifod6546h" path="res://UITextures/Buttons/show_chat.png" id="5_nd6yq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tc7v0"]
bg_color = Color(0.0823529, 0.8, 0.8, 1)
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0823529, 0.8, 0.8, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ItemStats" type="Control"]
z_index = 1
layout_mode = 3
anchor_left = 0.000833333
anchor_top = -0.707407
anchor_right = 0.999167
anchor_bottom = -0.00740741
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
script = ExtResource("1_4bbpx")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tc7v0")
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="Panel"]
self_modulate = Color(0.0768358, 0.0768358, 0.0768358, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 10.0
offset_right = -5.00049
offset_bottom = -6.99979
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.99544)
mouse_filter = 0
texture = ExtResource("3_yq227")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TextureRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00926706
anchor_top = 0.0271003
anchor_right = 0.98989
anchor_bottom = 0.98374
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_stretch_ratio = 0.15

[node name="Label" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_x8rl0")
theme_override_font_sizes/font_size = 29
text = "CARD STATS"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquippedIcon" type="TextureRect" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(203.28, 310.73)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_iotqp")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 270)
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Name"

[node name="Label5" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Scoreboost"

[node name="Label6" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(101, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Healboost"

[node name="Label2" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Group"

[node name="Label3" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Position 1"

[node name="Label4" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Position 2"

[node name="Label7" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(101, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Tier"

[node name="Label8" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 17
text = "Era"

[node name="HBoxContainer2" type="VBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(189, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="ScoreboostLabel" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="HealboostLabel" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="GroupLabel" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="Position1Label" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="Position2Label" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="TierLabel" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="EraLabel" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="EquipUnequipButton" type="TextureButton" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_3i6tk")
ignore_texture_size = true
stretch_mode = 0

[node name="EquipLabel" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/EquipUnequipButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -11.0
offset_right = 57.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_fgky4")
theme_override_font_sizes/font_size = 0
text = "Equip"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerupButton" type="TextureButton" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
modulate = Color(0.306923, 0.306923, 0.306923, 1)
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_3i6tk")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/PowerupButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -11.0
offset_right = 57.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Power-up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillsEquippedContainer" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2/SkillsEquippedContainer"]
layout_mode = 2

[node name="CardSkillButton" type="TextureButton" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2/SkillsEquippedContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 66)
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
ignore_texture_size = true
stretch_mode = 0

[node name="CompareContainer" type="VBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2/SkillsEquippedContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2
theme_override_fonts/font = ExtResource("3_x8rl0")
theme_override_font_sizes/font_size = 16
text = "CARD SKILLS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label1" type="Label" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2
theme_override_font_sizes/font_size = 16
text = "Rarity
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/TextureRect2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="TextureButton" parent="Panel/TextureRect2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.956192
anchor_top = 1.13798
anchor_right = 1.00819
anchor_bottom = 1.30058
grow_horizontal = 2
grow_vertical = 2
rotation = -7.85361
mouse_force_pass_scroll_events = false
texture_normal = ExtResource("5_nd6yq")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/EquipUnequipButton" to="." method="_on_equip_unequip_button_pressed"]
[connection signal="toggled" from="Panel/TextureRect2/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2/SkillsEquippedContainer/VBoxContainer/CardSkillButton" to="." method="_on_card_skill_button_toggled"]
[connection signal="pressed" from="Panel/TextureRect2/CloseButton" to="." method="_on_close_button_pressed"]
